// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should not return forked repos 1`] = `
Object {
  "12482715": Object {
    "archive_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/{archive_format}{/ref}",
    "assignees_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/branches{/branch}",
    "clone_url": "https://github.com/hannupekka/fressi-gym-activity.git",
    "collaborators_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/comments{/number}",
    "commits_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/commits{/sha}",
    "compare_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/contributors",
    "created_at": "2013-08-30T09:17:39Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/deployments",
    "description": "Fetches, parses and formats gym activity for Fressi gyms",
    "downloads_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/downloads",
    "events_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/events",
    "fork": false,
    "forks": 0,
    "forks_count": 0,
    "forks_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/forks",
    "full_name": "hannupekka/fressi-gym-activity",
    "git_commits_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/git/tags{/sha}",
    "git_url": "git://github.com/hannupekka/fressi-gym-activity.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": false,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/hooks",
    "html_url": "https://github.com/hannupekka/fressi-gym-activity",
    "id": 12482715,
    "issue_comment_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/issues{/number}",
    "keys_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/labels{/name}",
    "language": "Python",
    "languages_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/languages",
    "merges_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/merges",
    "milestones_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/milestones{/number}",
    "mirror_url": null,
    "name": "fressi-gym-activity",
    "notifications_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/notifications{?since,all,participating}",
    "open_issues": 0,
    "open_issues_count": 0,
    "owner": 4472477,
    "private": false,
    "pulls_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/pulls{/number}",
    "pushed_at": "2013-10-31T15:13:15Z",
    "releases_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/releases{/id}",
    "size": 144,
    "ssh_url": "git@github.com:hannupekka/fressi-gym-activity.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/stargazers",
    "statuses_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/subscribers",
    "subscription_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/subscription",
    "svn_url": "https://github.com/hannupekka/fressi-gym-activity",
    "tags_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/tags",
    "teams_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/teams",
    "trees_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/git/trees{/sha}",
    "updated_at": "2013-10-31T15:13:19Z",
    "url": "https://api.github.com/repos/hannupekka/fressi-gym-activity",
    "watchers": 0,
    "watchers_count": 0,
  },
}
`;

exports[`Selector should return all repos 1`] = `
Object {
  "12482715": Object {
    "archive_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/{archive_format}{/ref}",
    "assignees_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/branches{/branch}",
    "clone_url": "https://github.com/hannupekka/fressi-gym-activity.git",
    "collaborators_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/comments{/number}",
    "commits_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/commits{/sha}",
    "compare_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/contributors",
    "created_at": "2013-08-30T09:17:39Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/deployments",
    "description": "Fetches, parses and formats gym activity for Fressi gyms",
    "downloads_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/downloads",
    "events_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/events",
    "fork": false,
    "forks": 0,
    "forks_count": 0,
    "forks_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/forks",
    "full_name": "hannupekka/fressi-gym-activity",
    "git_commits_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/git/tags{/sha}",
    "git_url": "git://github.com/hannupekka/fressi-gym-activity.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": false,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/hooks",
    "html_url": "https://github.com/hannupekka/fressi-gym-activity",
    "id": 12482715,
    "issue_comment_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/issues{/number}",
    "keys_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/labels{/name}",
    "language": "Python",
    "languages_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/languages",
    "merges_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/merges",
    "milestones_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/milestones{/number}",
    "mirror_url": null,
    "name": "fressi-gym-activity",
    "notifications_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/notifications{?since,all,participating}",
    "open_issues": 0,
    "open_issues_count": 0,
    "owner": 4472477,
    "private": false,
    "pulls_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/pulls{/number}",
    "pushed_at": "2013-10-31T15:13:15Z",
    "releases_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/releases{/id}",
    "size": 144,
    "ssh_url": "git@github.com:hannupekka/fressi-gym-activity.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/stargazers",
    "statuses_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/subscribers",
    "subscription_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/subscription",
    "svn_url": "https://github.com/hannupekka/fressi-gym-activity",
    "tags_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/tags",
    "teams_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/teams",
    "trees_url": "https://api.github.com/repos/hannupekka/fressi-gym-activity/git/trees{/sha}",
    "updated_at": "2013-10-31T15:13:19Z",
    "url": "https://api.github.com/repos/hannupekka/fressi-gym-activity",
    "watchers": 0,
    "watchers_count": 0,
  },
  "18128997": Object {
    "archive_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/{archive_format}{/ref}",
    "assignees_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/branches{/branch}",
    "clone_url": "https://github.com/hannupekka/heroku-buildpack-python-libffi.git",
    "collaborators_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/comments{/number}",
    "commits_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/commits{/sha}",
    "compare_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/contributors",
    "created_at": "2014-03-26T06:35:13Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/deployments",
    "description": "A fork of heroku-buildpack-python that includes some additional build dependencies: libffi.  This buildpack is not currently supported or maintained.",
    "downloads_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/downloads",
    "events_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/events",
    "fork": true,
    "forks": 0,
    "forks_count": 0,
    "forks_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/forks",
    "full_name": "hannupekka/heroku-buildpack-python-libffi",
    "git_commits_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/git/tags{/sha}",
    "git_url": "git://github.com/hannupekka/heroku-buildpack-python-libffi.git",
    "has_downloads": true,
    "has_issues": false,
    "has_pages": false,
    "has_projects": true,
    "has_wiki": true,
    "homepage": "",
    "hooks_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/hooks",
    "html_url": "https://github.com/hannupekka/heroku-buildpack-python-libffi",
    "id": 18128997,
    "issue_comment_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/issues{/number}",
    "keys_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/labels{/name}",
    "language": "Python",
    "languages_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/languages",
    "merges_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/merges",
    "milestones_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/milestones{/number}",
    "mirror_url": null,
    "name": "heroku-buildpack-python-libffi",
    "notifications_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/notifications{?since,all,participating}",
    "open_issues": 0,
    "open_issues_count": 0,
    "owner": 4472477,
    "private": false,
    "pulls_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/pulls{/number}",
    "pushed_at": "2014-03-26T07:28:26Z",
    "releases_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/releases{/id}",
    "size": 13335,
    "ssh_url": "git@github.com:hannupekka/heroku-buildpack-python-libffi.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/stargazers",
    "statuses_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/subscribers",
    "subscription_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/subscription",
    "svn_url": "https://github.com/hannupekka/heroku-buildpack-python-libffi",
    "tags_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/tags",
    "teams_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/teams",
    "trees_url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi/git/trees{/sha}",
    "updated_at": "2014-03-26T07:28:26Z",
    "url": "https://api.github.com/repos/hannupekka/heroku-buildpack-python-libffi",
    "watchers": 0,
    "watchers_count": 0,
  },
}
`;
